ePortfolio 2.3/src/objects/LP_Template_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Custom_Package_Header__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Custom Package Header</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Header_Logo__c</fullName>
        <description>id of document that contains image for learner profile logo in header</description>
        <inlineHelpText>id of document that contains image for learner profile logo in header</inlineHelpText>
        <label>Header Logo</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hero_Image__c</fullName>
        <description>id of document that contains hero image</description>
        <inlineHelpText>id of document that contains hero image</inlineHelpText>
        <label>Hero Image</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registration_Page_Logo__c</fullName>
        <description>id of document that contains image for registration page logo in header</description>
        <inlineHelpText>id of document that contains image for registration page logo in header</inlineHelpText>
        <label>Registration Page Logo</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Template_Label__c</fullName>
        <defaultValue>&quot;motivislp__SiteTemplate&quot;</defaultValue>
        <description>This setting will be used to store the Site Template API Name that will be used to display the look and feel on all Learner Profile pages</description>
        <label>Site Template Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>LP Template Settings</label>
</CustomObject>